prueba jira rest. mejor